# RepoGraph

./: .containerignore  .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE_SHARED_RETRIEVAL_BRIEF.md  Containerfile  Dockerfile  INTEGRATION_POINTS.md  PERFORMANCE_SPRINT_RESULTS.md  PODMAN_SETUP.md  PROGRAM_REPOGRAPH.md  README.md  REPOGRAPH_REDIS_POSTGRES_IMPLEMENTATION_PLAN.md  RUST_MIGRATION_PLAN.md  api_compatibility_tests.py  audit_database_needs.py  babyai_cli.py  benchmark_comparison.py  conftest.py  docker-compose.aesa.yml  docker-compose.dev.yml  docker-compose.exercise.yml  docker-compose.override.dev.yml  docker-compose.override.yml  docker-compose.yml  example_usage.py  export_slices.py  main.py  performance_benchmark.py  podman-compose.repograph.dev.yml  podman-compose.repograph.override.yml  podman-compose.repograph.yml  podman-repograph.ps1  pyproject.toml  repograph-pod.yaml  requirements-dev.txt  requirements-lock.txt  simple_api_test.py  simple_mcp_test.py  (+2 more)
.claude/: settings.json
.claude/skills/: RepoGraphSkill+.md
.github/workflows/: tests.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
babyai_shared/kafka/: schema_validator.py
demo/: __init__.py  approve_promotion.py  business_swarm_demo.py  challenge_engine.py  crypto_swarm_analysis.py
demo/executors/: valuta_executor.py
docker/postgres/: init.sql
docs/: AUTO_INDEXING.md
docs/integration/: INTEGRATION_POINTS.md
docs/program/: PROGRAM_BABYAI.md
docs/roadmap/: ROADMAP.md
repograph/: __init__.py  autoindex.py  container_start.py
repograph-poc/: Cargo.toml
repograph-poc/benches/: parse_performance.rs
repograph-poc/src/: api_server.rs  graph_store.rs  lib.rs  main.rs  mcp_server.rs
repograph/api/: __init__.py  app.py  routes.py
repograph/cache/: __init__.py  keys.py  redis_layer.py
repograph/connectors/: __init__.py
repograph/graph/: __init__.py  factory.py  store.py
repograph/indexer/: __init__.py  config_indexer.py  enricher.py  languages.py  parser.py  schema.py  walker.py
repograph/knowledge/: __init__.py  ci_indexer.py  docs_indexer.py  enricher.py  ownership_indexer.py
repograph/mcp_server/: __init__.py  __main__.py  server.py
repograph/memory/: __init__.py  models.py  patch_prompts.py  store.py
repograph/postgres/: __init__.py  metrics.py  migrate.py  storage.py  tracer.py
repograph/retrieval/: __init__.py  coarse_retriever.py  code_span_selector.py  pipeline.py  structural_expander.py  task_planner.py  trace.py
repograph/shared_retrieval/: __init__.py  adapters.py  analysis.py  compressor.py  gateway.py  models.py  profiles.py  prompt_packer.py
repograph/task_families/: __init__.py  families.py  registry.py
repograph/token_budget/: __init__.py  engine.py  profiles.py
repograph/verifier/: __init__.py  models.py  orchestrator.py  runners.py
repograph/working_set/: __init__.py  budget.py  builder.py  explainer.py  models.py  serializer.py
scripts/: __init__.py  audit_services.py  benchmark.py  check_no_bypass.py  check_obsidian.py  compare_benchmark.py  context_plane_test.py  distill_code_gen_expert.py  distill_repair_expert.py  distill_test_gen_expert.py  export_repair_policy_onnx.py  export_router_onnx.py  knowledge_service_test.py  migrate-all-services.py  migrate_enrichment.py  mine_learning_events.py  phase_1_golden_path_test.py  phase_2_database_analysis.py  probe_ui_python313_build.py  promote_repair_policy_model.py  promote_router_model.py  promote_ssrn_experts.py  promotion_gates.py  promotion_utils.py  provenance_service_test.py  run_lora_orchestrator.py  run_memory_init.py  run_orchestrator_worker.py  run_security_daemons.py  run_telemetry_consumer.py  run_watchdog_firecrawl.py  setup_alembic_for_service.py  simple_kafka_test.py  smoke_compose.sh  smoke_self_test.py  smoke_test_episode.py  smoke_test_episode_completed.py  start_trading.py  test_kafka_connectivity.py  trace_decision_events.py  (+5 more)
scripts/architecture/: build_current_state_map.py  check_no_aesa_runtime_imports.py  check_service_import_boundaries.py
scripts/autoindex/: Install-GitHooks.ps1  Setup-GlobalAutoindex.ps1  install-git-hooks.sh  setup-global-autoindex.sh
scripts/docs/: data-platform-consolidation-complete.md  media-platform-consolidation-complete.md  microservices-transformation-complete.md  tool-platform-consolidation-complete.md
scripts/migration/: create_agent_service.py
services/agent-platform/: README.md  config.yaml
services/billing/: Dockerfile  main.py  requirements.txt
services/broker-gateway/: Dockerfile  __init__.py  agent_worker.py  episode_executor.py  event_schemas.py  in_memory.py  in_memory_bus.py  interfaces.py  kafka.py  kafka_consumer.py  kafka_events.py  kafka_retry.py  main.py  message_bus.py  metrics.py  orchestrator_worker.py  requirements.txt  topics.py  worker.py  worker_lifecycle.py
services/claim-detector/: Dockerfile  main.py  requirements.txt
services/context-plane/: Dockerfile  alembic.ini  kafka_contract.yaml  requirements.txt  service_manifest.yaml
services/data-platform/: requirements.txt
services/development-agents/: README.md  config.yaml
services/editorial-agents/: Dockerfile  README.md  config.yaml  requirements.txt
services/exercise_runner/: Dockerfile  main.py  runner.py  scenario_registry.py  tracer.py  verifier.py
services/expert-serving/: Dockerfile  requirements.txt
services/intelligence-agents/: README.md  config.yaml
services/knowledge-service/: kafka_contract.yaml  service_manifest.yaml
services/truthpack-conversation/: Dockerfile  pyproject.toml  requirements.txt
services/truthpack-conversation/src/: main.py
services/truthpack-conversation/src/application/: __init__.py  ports.py  use_cases.py
services/truthpack-conversation/src/domain/: __init__.py  models.py  services.py
services/truthpack-conversation/src/infrastructure/: __init__.py  kafka_consumer.py  kafka_publishers.py  override_store.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_api.py  test_parser.py  test_store.py  test_walker.py
(+5046 files in other folders)
