[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repograph"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pyyaml>=6.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pydantic>=2.0",
  "mcp>=1.2",
  "cogdb>=3.0",
  "tree-sitter-language-pack>=0.13",
  "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=1.0",
  "pytest-cov>=7.0",
  "pytest-mock>=3.14",
]
cache = [
  "redis>=5,<6",
]
postgres = [
  "psycopg2-binary>=2.9",
]
tokenizers = [
  "tiktoken>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration tests (may require external services)",
]
norecursedirs = [
  "artifacts",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = [
  "repograph*"
]
exclude = ["tests*", "artifacts*", "*.egg-info*"]

[project.scripts]
repograph = "repograph.api.app:main"
repograph-mcp = "repograph.mcp_server.server:main"
repograph-migrate = "repograph.postgres.migrate:main"
repograph-autoindex = "repograph.autoindex:main"
repograph-start = "repograph.container_start:main"
