[package]
name = "repograph-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
regex = "1.10"

# Graph storage and data structures
sled = "0.34"                      # Embedded database for graph storage
petgraph = "0.6"                   # Graph data structure and algorithms
indexmap = "2.0"                   # Ordered hash maps
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"                    # Concurrent hash maps

# Web framework and API
axum = "0.7"                       # Modern async web framework
tower = "0.4"                      # Service middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"                      # HTTP implementation
tower-layer = "0.3"                # Tower layer utilities
tracing = "0.1"                    # Structured logging
tracing-subscriber = "0.3"         # Logging subscriber

# Performance monitoring
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[lib]
name = "repograph_poc"
path = "src/lib.rs"

[[bin]]
name = "repograph-poc"
path = "src/main.rs"

[[bin]]
name = "repograph-api"
path = "src/bin/api_server.rs"

[[bin]]
name = "repograph-mcp"
path = "src/bin/mcp_server.rs"

[[bench]]
name = "parse_performance"
harness = false
